Quorum3/Library/Tests/TypeCheckerGenerated/Fail/RetAssignBooleanIntObj.quorum
class Main
    action Main
        boolean v = Test()
    end

    action Test() returns boolean
        Integer var
        var:SetValue(5)
        return var
    end
end